--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.3",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-razorpay": "^2.3.0",
     "yup": "^1.2.0"
   },
